@@ -6,14 +6,13 @@
 --------------------Configuration: qwsv - Win32 Release--------------------
 </h3>
 <h3>Command Lines</h3>
-Creating temporary file "E:\Temp\RSP24.tmp" with contents
+Creating temporary file "E:\Temp\RSP86.tmp" with contents
 [
 /nologo /G6 /Zp4 /ML /W3 /GX /O1 /Op /D "SERVERONLY" /D "id386" /D "NDEBUG" /D "USE_PR2" /Fr".\SRelease/" /Fp".\SRelease/mvdsv.pch" /YX /Fo".\SRelease/" /Fd".\SRelease/" /FD /c 
-"D:\Quake\Projects\mvdsv\mvdsv\source\sv_main.c"
-"D:\Quake\Projects\mvdsv\mvdsv\source\sv_user.c"
+"D:\Quake\Projects\mvdsv\mvdsv\source\pr_edict.c"
 ]
-Creating command line "cl.exe @E:\Temp\RSP24.tmp" 
-Creating temporary file "E:\Temp\RSP25.tmp" with contents
+Creating command line "cl.exe @E:\Temp\RSP86.tmp" 
+Creating temporary file "E:\Temp\RSP87.tmp" with contents
 [
 wsock32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib winmm.lib /nologo /subsystem:windows /incremental:no /pdb:".\SRelease/mvdsv-current.pdb" /machine:I386 /out:"..\mvdsv-current.exe" 
 .\SRelease\cmd.obj
@@ -55,13 +54,12 @@ wsock32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32
 .\SRelease\math.obj
 .\SRelease\worlda.obj
 ]
-Creating command line "link.exe @E:\Temp\RSP25.tmp"
+Creating command line "link.exe @E:\Temp\RSP87.tmp"
 <h3>Output Window</h3>
 Compiling...
-sv_main.c
-sv_user.c
+pr_edict.c
 Linking...
-Creating temporary file "E:\Temp\RSP27.tmp" with contents
+Creating temporary file "E:\Temp\RSP89.tmp" with contents
 [
 /nologo /o".\SRelease/mvdsv.bsc" 
 .\SRelease\cmd.sbr
@@ -99,7 +97,7 @@ Creating temporary file "E:\Temp\RSP27.tmp" with contents
 .\SRelease\version.sbr
 .\SRelease\world.sbr
 .\SRelease\zone.sbr]
-Creating command line "bscmake.exe @E:\Temp\RSP27.tmp"
+Creating command line "bscmake.exe @E:\Temp\RSP89.tmp"
 Creating browse info file...
 <h3>Output Window</h3>
 
